--- a/src/style/layout/footer.scss
+++ b/src/style/layout/footer.scss
@@ -2,9 +2,12 @@
 @import '../mixins.scss';
 
 footer {
+  // position: absolute;
+  // bottom: 0;
+  // margin-top: 1em;
   width: 100%;
-  height: $footer-height;
-  min-height: $footer-height;
+  height: 20vh;
+  // min-height: 200px;
   background-color: black;
 
   display: flex;
@@ -21,7 +24,8 @@ footer {
     padding-top: 1%;
     text-align: center;
   }
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: 768px) {
+
     .footer__logo--mobile {
       display: flex;
     }
