--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -24,18 +24,16 @@ html {
     min-width: 320px;
 
     & #root {
-      // display: flex;
+      // position: relative;
       height: 100%;
       width: 100%;
-
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
-
+      align-items: stretch;
+      justify-content: space-around;
       margin: 0;
 
       & #main {
-        overflow: hidden;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
