--- a/src/style/pages/about.scss
+++ b/src/style/pages/about.scss
@@ -1,18 +1,22 @@
 @import '../variables.scss';
 @import '../mixins.scss';
 
-#container_about_page {
+.container_about_page {
   display: flex;
   flex-direction: column;
-  height: 100%;
-  width: auto;
-}
-#collapses_about_page {
-  margin: 5%;
-  @media screen and (max-width: 768px) {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
+  justify-content: start;
+  align-items: start;
+  min-height: 75vh;
+  // width: auto;
+
+  & #collapses_about_page {
+    margin-top: 5vh;
+    padding: 2%;
+    gap: 30px;
+    @media screen and (max-width: 768px) {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
   }
 }
