--- a/src/style/style.css
+++ b/src/style/style.css
@@ -16,7 +16,7 @@
 .header .header__links {
   display: flex;
   gap: 60px;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 24px;
   font-weight: 500;
   line-height: 34.22px;
@@ -59,7 +59,7 @@ footer {
   justify-content: center;
   align-items: center;
   text-align: center;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 24px;
   font-weight: 500;
   line-height: 34.22px;
@@ -108,7 +108,7 @@ footer p {
   background-blend-mode: multiply;
 }
 .banner .banner::before {
-  content: "";
+  content: '';
   position: absolute;
   top: 0;
   left: 0;
@@ -123,7 +123,7 @@ footer p {
   height: 100%;
   grid-column: 1/2;
   grid-row: 1/2;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 48px;
   font-weight: 500;
   line-height: 68.45px;
@@ -141,7 +141,7 @@ footer p {
     height: 111px;
   }
   .banner .banner__text {
-    font-family: "Montserrat", sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 48px;
     font-weight: 500;
     line-height: 68.45px;
@@ -207,7 +207,7 @@ footer p {
   text-decoration: none;
 }
 .locations__list .locations__list--link .locations__list--title {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 24px;
   font-weight: 500;
   line-height: 34.22px;
@@ -234,7 +234,7 @@ footer p {
   margin: 0;
   padding: 10px;
   background-color: #ff6060;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 18px;
   font-weight: 500;
   line-height: 25.67px;
@@ -247,7 +247,7 @@ footer p {
   }
 }
 .collapse .content {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 14px;
   font-weight: 500;
   color: #ff6060;
@@ -306,7 +306,7 @@ footer p {
   }
 }
 .slideshow__container .slideshow__counter {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 18px;
   font-weight: 500;
   line-height: 25.67px;
@@ -334,7 +334,7 @@ footer p {
   margin-bottom: 2%;
 }
 .erreur .erreur__title {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 48px;
   font-weight: 500;
   line-height: 68.45px;
@@ -344,7 +344,7 @@ footer p {
   letter-spacing: 0em;
 }
 .erreur .erreur__text {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 24px;
   font-weight: 500;
   line-height: 34.22px;
@@ -353,7 +353,7 @@ footer p {
   text-align: center;
 }
 .erreur .erreur__link {
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 14px;
   font-weight: 500;
   color: #ff6060;
