--- a/src/style/variables.scss
+++ b/src/style/variables.scss
@@ -3,12 +3,12 @@ $white-color: white;
 $black-color: black;
 $primary-font-family: 'Montserrat', sans-serif;
 
-$footer-height: 209px;
+
 $main_margin--desktop: 5% 9%;
 $main_margin--max950px: 5% 7%;
 $main_margin--max800px: 4% 5%;
 $main_margin--mobile: 3% 4%;
-$main_margin--max400px: 3.5%;
-$main_margin--max375px: 3%;
+$main_margin--max400px: 3%;
+$main_margin--max375px: 2%;
 
 $collapse_header-height: 3em;
